--- a/recipes/christmas-dinner/christmas-dinner.gradle
+++ b/recipes/christmas-dinner/christmas-dinner.gradle
@@ -5,5 +5,6 @@ dependencies {
     implementation project(':potato-salad-with-ham')
     implementation project(':breaded-carp')
 
+    runtimeOnly project(':lemon')
     runtimeOnly project(':plate')
 }
