--- a/settings.gradle
+++ b/settings.gradle
@@ -6,13 +6,7 @@ buildscript {
     }
     dependencies {
         classpath group: 'org.kordamp.gradle',      name: 'settings-gradle-plugin',         version: kordampPluginVersion
-        classpath group: 'org.kordamp.gradle',      name: 'groovy-project-gradle-plugin',   version: kordampPluginVersion
-        classpath group: 'org.kordamp.gradle',      name: 'checkstyle-gradle-plugin',       version: kordampPluginVersion
-        classpath group: 'org.kordamp.gradle',      name: 'codenarc-gradle-plugin',         version: kordampPluginVersion
-        classpath group: 'org.kordamp.gradle',      name: 'guide-gradle-plugin',            version: kordampPluginVersion
-        classpath group: 'org.kordamp.gradle',      name: 'coveralls-gradle-plugin',        version: kordampPluginVersion
-        classpath group: 'org.ajoberstar',          name: 'gradle-git-publish',             version: gitPublishPluginVersion
-        classpath group: 'io.github.gradle-nexus',  name: 'publish-plugin',                 version: nexusPluginVersion
+        classpath group: 'org.kordamp.gradle',      name: 'java-project-gradle-plugin',   version: kordampPluginVersion
     }
 }
 
@@ -24,9 +18,12 @@ projects {
     directories = ['ingredients', 'kitchenware', 'recipes']
 
     plugins {
-        dirs(['ingredients', 'kitchenware', 'recipes']) {
+        dirs(['ingredients', 'kitchenware']) {
             id 'java-library'
-            id 'groovy'
+        }
+        dirs(['recipes']) {
+            id 'java-library'
+            id 'application'
         }
     }
 }
