--- a/recipes/christmas-dinner/christmas-dinner.gradle
+++ b/recipes/christmas-dinner/christmas-dinner.gradle
@@ -1,10 +1,11 @@
 dependencies {
+    api project(':dish')
+    api project(':tableware')
     api project(':potato-salad')
     api project(':breaded-dish')
 
     implementation project(':potato-salad-with-ham')
     implementation project(':breaded-carp')
 
-    runtimeOnly project(':lemon')
     runtimeOnly project(':plate')
 }
